2003-08-07  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin
	
	Fix for this bug:

	<rdar://problem/3368552>: Fix inappropriate use of NSURL creation methods in WebKit

	Change calls to URLWithString: or URLWithString:relativeToURL to
	_web_URLWithDataAsString: and _web_URLWithDataAsString:relativeToURL,
	respectively.

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _loadItem:withLoadType:]):
        (-[WebFrame _loadURL:intoChild:]):
        * WebView.subproj/WebPreferences.m:
        (-[WebPreferences userStyleSheetLocation]):
        * WebView.subproj/WebView.m:
        (-[WebView takeStringURLFrom:]):
        (-[WebView setMainFrameURL:]):

2003-08-06  Darin Adler  <darin@apple.com>

        Reviewed by Richard.

        - fixed 3347114 -- remove vestiges of posing, including init routine, from WebKit

        * WebView.subproj/WebHTMLViewPrivate.m: Removed WebNSTextView, WebNSView, and WebNSWindow,
        removed the code to have them pose as NSTextView, NSView, and NSWindow, and removed excess
        imports that are no longer needed.

2003-08-06  Richard Williamson   <rjw@apple.com>

	Fixed 3365378.  Edge case text run > 1024 hit by JS generated string.  We weren't correctly checking size of string length.  Used /2 instead of *2.

        Reviewed by Vicki (and Dan!).

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer _CG_drawHighlightForRun:style:atPoint:]):
        (-[WebTextRenderer _CG_drawRun:style:atPoint:]):

2003-08-06  Richard Williamson   <rjw@apple.com>

	Fixed 3348630.  Pick up about 1% by moving implementation of _unicodeDirection to WebCore and inlining.

        Reviewed by Ken.

        * Misc.subproj/WebUnicode.h:
        * Misc.subproj/WebUnicode.m:
        (_unicodeDirection):
        (_unicodeJoining):
        (_unicodeMirrored):
        (WebKitInitializeUnicode):
        * Misc.subproj/WebUnicodeTables.m:

2003-08-06  Chris Blumenberg  <cblu@apple.com>
